fix:added a several backend user interface implementations
